# DailyShopping-Web

./: .gitignore  CLAUDE.md  Dockerfile  dev.sh  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
data/: daily-shopping.db-shm  daily-shopping.db-wal
server/: Dockerfile  package-lock.json  package.json
server-rust/: Cargo.toml  Dockerfile
server-rust/src/: config.rs  db.rs  errors.rs  main.rs
server-rust/src/middleware/: auth.rs  mod.rs
server-rust/src/models/: lista.rs  mod.rs  user.rs
server-rust/src/routes/: auth.rs  listas.rs  mod.rs  stats.rs
server/src/: database.ts  index.ts
server/src/middleware/: auth.ts
server/src/routes/: auth.ts  listas.ts  stats.ts
src/: App.tsx  container.ts  index.css
src/application/dtos/: ListaCompraDTO.ts
src/domain/entities/: ListaCompra.ts  Producto.ts  SupermercadoDisponible.ts
src/domain/ports/: IListaCompraRepository.ts  ISupermercadoPort.ts
src/domain/services/: JuegoPreciosService.ts  PrecioCalculatorService.ts
src/infrastructure/http/: HttpListaRepository.ts
src/infrastructure/persistence/: IndexedDBListaRepository.ts  db.ts
src/infrastructure/supermercados/: AlcampoAdapter.ts  BMAdapter.ts  CarrefourAdapter.ts  DiaAdapter.ts  MercadonaAdapter.ts
src/presentation/components/: AppHeader.tsx  BottomNav.tsx  EmptyState.tsx  Layout.tsx  ListaCard.tsx  LoadingSpinner.tsx  ProductoCard.tsx  ProtectedRoute.tsx
src/presentation/pages/: BuscadorProductos.tsx  ComparadorProductos.tsx  CreadorListas.tsx  JuegoPrecios.tsx  (+6 more)
(+10 files in other folders)
