[package]
name = "daily-shopping-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daily-shopping-server"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.7",  features = ["macros"] }
tokio         = { version = "1",    features = ["full"] }
tokio-rusqlite = "0.5"
rusqlite      = { version = "0.31", features = ["bundled"] }
serde         = { version = "1",    features = ["derive"] }
serde_json    = "1"
jsonwebtoken  = "9"
bcrypt        = "0.15"
tower-http    = { version = "0.5",  features = ["cors"] }
anyhow        = "1"
thiserror     = "1"
chrono        = "0.4"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy       = "0.15"
